# StudySession-LE

./: .current_project  .env.example  .gitignore  .mcp.json  AI_QUERY_OPTIMIZATION_GUIDE.md  CRASH-INVESTIGATION-FINDINGS.md  EXAMPLES_SUMMARY.md  IMPLEMENTATION_FILES.txt  PATTERN_ANALYSIS.md  QUICK-STATUS.md  QUICK-TEST-INSTRUCTIONS.md  README.md  README_SYSTEM_GUIDE.md  TEST-RESULTS.md  TIER1_IMPLEMENTATION_SUMMARY.md  bia_extraction_log.txt  extract_pdf.py  migrate_to_new_db.py  requirements.txt  setup.sh  test_api.py  test_simple.py  workspace_config.json
.claude/: CLAUDE.md
archive/: DEBUGGING_ANALYSIS.md  EXTRACTION_SUCCESS.md  README.md  requirements-dev.txt
database/: README.md
docs/: 01-PRD-Product-Requirements-Document.md  02-Architecture-Document.md  03-Implementation-Plan.md  04-Schema-Specification-v2-Atomic.md  04-Schema-Specification.md  05-Example-Creation-Guide.md  06-API-Cost-Management-Plan.md  07-Visualization-Design.md  08-LangExtract-Playbook.md  09-Extraction-Success-Summary.md  10-Phase-2-Roadmap-Multi-Source-And-Automation.md  ADDING_OSB_DIRECTIVES.md  AI_STUDY_ASSISTANT_TECH_STACK_RESEARCH.md  BIA_Rules_Extraction_Strategy.md  COMPREHENSIVE_CODE_REVIEW.md  CUSTOMER-OVERVIEW.md  Current-Status-Summary.md  DIAGRAM_WORKFLOW_SUMMARY.md  EXAM_PATTERN_ANALYSIS.md  Enhancement-Roadmap.md  MCP-Setup-Guide.md  OSB_DIRECTIVE_DOWNLOAD_GUIDE.md  Phase1-Complete.md  Phase2-Complete.md  (+17 more)
mcp_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_server/config_examples/: claude_desktop_config.json
mcp_server/schemas/: study_guide_schema.json
(+207 files in other folders)
