[project]
name = "knowledge-platform-mcp"
version = "0.1.0"
description = "Universal Knowledge Extraction & Query MCP Server"
authors = [{name = "Knowledge Platform Project"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
knowledge-platform-mcp = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
